# barq-vweb

./: .gitignore  README.md  build.sh
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: bench.rs
examples/: index.html  package-lock.json  package.json  vite.config.ts
examples/src/: barq-wasm-bridge.ts  embed-worker.ts  embedder.ts  hybrid-demo.ts  main.ts  persistence-demo.ts  shared.ts  style.css  text-demo.ts  vector-demo.ts
js/: package-lock.json  package.json  tsconfig.json
js/demo/: index.html
js/src/: index.ts  types.ts  worker.ts
shaders/: batch_cosine.wgsl
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/src/compute/: bridge.rs  dispatch.rs  gpu.rs  mod.rs
wasm/src/embed/: minilm.rs  mod.rs
wasm/src/index/: hnsw.rs  mod.rs  pq.rs
wasm/src/search/: bm25.rs  hybrid.rs  mod.rs
wasm/src/storage/: idb.rs  mod.rs  opfs.rs
wasm/tests/: integration.rs
